--- a/frontend/src/css/History.css
+++ b/frontend/src/css/History.css
@@ -129,15 +129,42 @@
 
 .little-box2 {
   position: relative;
-  top: 0px;
-  left: 1160px;
+  top: -10px;
+  left: 1140px;
   width: 135px;
   height: 20px;
   background-color: #7fff7f;
   border: 2px solid #101010;
   margin: 0px 0px;
-  padding: 1px;
+  padding: 5px 12px;
   font-size: 15px;
+  text-align: center;
+}
+.deleted-box {
+  position: relative;
+  top: -10px;
+  left: 1140px;
+  width: 135px;
+  height: 20px;
+  background-color: #ff5858;
+  border: 2px solid #101010;
+  margin: 0px 0px;
+  padding: 5px 12px;
+  font-size: 15px;
+  text-align: center;
+}
+.completed-box {
+  position: relative;
+  top: -10px;
+  left: 1140px;
+  width: 135px;
+  height: 20px;
+  background-color: #7fff7f;
+  border: 2px solid #101010;
+  margin: 0px 0px;
+  padding: 5px 12px;
+  font-size: 15px;
+  text-align: center;
 }
 
 .deleted {
@@ -152,7 +179,33 @@
   padding: 1px;
   font-size: 15px;
 }
+.restore-deleted {
+  background-color: #ff5858; /* Set the button background color to match the background */
+  color: #000; /* Set the button text color */
+  border: none; /* Remove button border */
+  padding: 12px 10px; /* Adjust button padding */
+  cursor: pointer; /* Change cursor to pointer on hover */
+  font-size: 15px;
+  line-height: 0;
+  font-weight: bold;
+}
 
+.restore-completed {
+  background-color: #7fff7f; /* Set the button background color to match the background */
+  color: #000; /* Set the button text color */
+  border: none; /* Remove button border */
+  padding: 12px 12px; /* Adjust button padding */
+  cursor: pointer; /* Change cursor to pointer on hover */
+  font-size: 12px;
+  line-height: 0;
+  font-weight: bold;
+}
+.restore-button {
+  position: relative;
+  left: 20%;
+  width: 0px;
+  border: 5px;
+}
 .task-box {
   position: relative;
 }
